# ffmpeg-hello-world

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/rifqimfahmi/helloworldffmpeeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/rifqimfahmi/helloworldffmpeeg/: MainActivity.kt
app/src/main/java/com/rifqimfahmi/helloworldffmpeeg/video/: VideoFileConfig.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/rifqimfahmi/helloworldffmpeeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
